--- a/style.css
+++ b/style.css
@@ -1,109 +1,108 @@
-body{
-   background-color: #333333;
-   color:white
-}
-h1{
-    margin-top: 0%;
-    text-align: CENTER;
-    font-family: CURSIVE;
-    font-size: XXX-LARGE;
-}
-.box{
-    height: 156px;
-    width: 156px;
-    border: solid white 2px;
-    background-color: #333333;
-    display: grid;
-    grid-template-columns: auto auto auto;
-}
-#main{
-    height: 480px;
-    width: 480px;
-    border: solid white 4px;
+body {
+    font-family: Arial, sans-serif;
     display: flex;
-    flex-direction: row;
-    margin-left: 30%;
-    margin-top: -1%;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f5f5f5;
 }
-.cell{
-    height: 50px;
-    width: 50px;
-    border: solid white 1px;
+
+.container {
     text-align: center;
-    background-color: #333333;
-    text-align: center;
-    font-size: x-large;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+.difficulty-buttons button,
+#solve,
+#checkSolution,
+#howToPlay {
+    padding: 10px 20px;
+    margin: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    background-color: #3498db;
+    color: white;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.difficulty-buttons button:hover,
+#solve:hover,
+#checkSolution:hover,
+#howToPlay:hover {
+    background-color: #2980b9;
+}
+
+.timer-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+#timerSelect {
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 5px;
+    margin-right: 10px;
+}
+
+#timerDisplay {
+    font-size: 20px;
     font-weight: bold;
+    padding: 5px 10px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+    background-color: #e0f7fa;
+    width: 70px;
+    text-align: center;
 }
-input{
-    height: 45px;
-    width: 44px;
+
+.sudoku-grid {
+    display: grid;
+    grid-template-columns: repeat(9, 40px);
+    grid-template-rows: repeat(9, 40px);
+    gap: 1px;
+    background-color: #444;
+    margin: 20px auto;
+}
+
+.cell {
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    cursor: pointer;
+    border: 1px solid #ddd;
+}
+
+.cell input {
+    width: 100%;
+    height: 100%;
     border: none;
     text-align: center;
-    font-size: x-large;
+    font-size: 18px;
+    background-color: transparent;
+}
+
+.cell input:disabled {
+    color: black;
     font-weight: bold;
-    background-color: #333333;
-    color: white;
-}
-button{
-    height: 70px;
-    width: 200px;
-    font-size: x-large;
-    font-weight: bold;
-    background-color: red;
-    border: solid 4px black;
-    border-radius: 30px;
-    color: white;
-    position: absolute;
-    cursor: pointer;
-}
-#start{
-    top: 26%;
-    left: 5%;
-}
-#replay{
-    top: 45%;
-    left: 5%;
-}
-#answer{
-    top: 65%;
-    left: 5%;
+    background-color: #e0e0e0;
 }
 
-#game_type{
-    position: absolute;
-    top: 24%;
-    left: 75%;
-    
+.cell:nth-child(3n) {
+    border-right: 2px solid #444;
 }
 
-.label{
-    height: 15px;
-    width: 15px;
-    cursor: pointer;
+.cell:nth-child(27n) {
+    border-bottom: 2px solid #444;
 }
-
-#help{
-    left: 0%;
-    top: 150%;
-}
-#lives{
-    position: absolute;
-    top: 13%;
-    left: 72%;
-    color: orangered;
-    font-weight: bold;
-    font-size: x-large;
-}
-
-#timer{
-    top: 10%;
-    position: absolute;
-    left: 3%;
-    font-size: x-large;
-    color: white;
-    font-weight: bold;
-    
-}
-
-
