--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ h1 {
     grid-template-columns: repeat(9, 40px);
     grid-template-rows: repeat(9, 40px);
     gap: 1px;
-    background-color: #444;
     margin: 20px auto;
 }
 
@@ -99,10 +98,28 @@ h1 {
     background-color: #e0e0e0;
 }
 
-.cell:nth-child(3n) {
-    border-right: 2px solid #444;
+.cell:nth-child(3n+1) {
+    border-left: 2px solid black;
 }
 
-.cell:nth-child(27n) {
-    border-bottom: 2px solid #444;
+.cell:nth-child(3n) {
+    border-right: 2px solid black;
+}
+
+.cell:nth-child(27n+1),
+.cell:nth-child(27n+2),
+.cell:nth-child(27n+3),
+.cell:nth-child(27n+4),
+.cell:nth-child(27n+5),
+.cell:nth-child(27n+6),
+.cell:nth-child(27n+7),
+.cell:nth-child(27n+8),
+.cell:nth-child(27n+9) {
+    border-top: 2px solid black;
+}
+
+.cell:nth-child(n+19):nth-child(-n+27),
+.cell:nth-child(n+46):nth-child(-n+54),
+.cell:nth-child(n+73):nth-child(-n+81) {
+    border-bottom: 2px solid black;
 }
